# pypolys

./: README.md  setup.cfg
doc/: polys.txt  quickstart.txt
pypolys/: factory.py  mpolys.py  polys.py  test_factory.py  test_mpolys.py  test_polys.py  tester1.py
