[metadata]
name = pypolys
version = 0.2.0
author = Andrzej Kapanowski
author_email = andrzej.kapanowski@uj.edu.pl
description = Python implementation of polynomials
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ufkapano/pypolys
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Education
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.7
